[package]
name = "sanctum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
shuttle-shared-db = { version = "0.38.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = "1.28.2"
tracing = "0.1.40"
